# comic_downloader

./: .coverage  .gitignore  CONTEXT.md  LICENSE  README.md  downloader.spec  main.py  mkdocs.yml  pyproject.toml  pyrightconfig.json  requirements.txt  ruff.toml  skill.json
.claude/skills/: add-comic-source.skill
.claude/skills/add-comic-source/: SKILL.md
.claude/skills/add-comic-source/references/: code-patterns.md
.github/: release-drafter.yml
.github/workflows/: python-app.yml
configs/: boya.json  dmzj.json  dumanwu.json  manhuafree.json  manhuagui.json  manhuazhan.json  morui.json  runtime.sample.json  thmh.json  tuku.json
docs/: basic-usage.md  build.md  faq.md  index.md  install.md  intro.md  manage.md  overview.md
docs/ideation/: 2026-05-26-ux-performance-ideation.md  2026-06-01-code-structure-performance-ideation.md
docs/meta/: authors.md
docs/superpowers/plans/: 2026-06-05-source-profile.md  2026-06-08-volume-download-pipeline.md  2026-06-09-downloader-package-structure.md  2026-06-17-download-progress-adapter.md  2026-06-17-driver-manager.md  2026-06-17-tui-presenter.md
docs/superpowers/specs/: 2026-06-05-source-profile-design.md  2026-06-08-volume-download-pipeline-design.md  2026-06-09-downloader-package-structure-design.md  2026-06-17-download-progress-adapter-design.md  2026-06-17-driver-manager-design.md  2026-06-17-tui-presenter-design.md
downloader/: Thmh.py  archive.py  boya.py  browser_drivers.py  browser_modes.py  comic.py  dmzj.py  dumanwu.py  html_parser.py  image_downloader.py  manager.py  manhuafree.py  manhuagui.py  manhuazhan.py  maofly.py  models.py  morui.py  page_loading.py  runtime_config.py  scroll_loader.py  shell.py  source_config.py  source_profiles.py  sources.py  thmh.py  tui.py  tui_app.py  tuku.py
downloader/browser/: __init__.py  html_parser.py  manager.py  page_loading.py
downloader/download/: __init__.py  archive.py  images.py  progress.py  volume.py
downloader/sources/: __init__.py  profiles.py  registry.py  templates.py
downloader/sources/adapters/: __init__.py  boya.py  dmzj.py  dumanwu.py  manhuafree.py  manhuagui.py  manhuazhan.py  maofly.py  morui.py  thmh.py  tuku.py
tests/: conftest.py  test_adapter_dmzj.py  test_adapter_dumanwu.py  test_adapter_manhuafree.py  test_adapter_manhuagui.py  test_adapter_maofly.py  test_download_progress.py  test_download_resume.py  test_downloader_spec.py  test_driver_manager.py  test_main_cli.py  test_package_structure.py  test_page_loading.py  test_seleniumbase_html.py  test_shell_driver_lifecycle.py  test_source_profiles.py  test_sources.py  test_tui_presenter.py  test_volume_downloader.py
