[project]
name = "comic_downloader"
dynamic = ["version"]
description = "Effortlessly download comics via this lightweight, single-threaded command-line tool."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "fjcanyue" }]
urls = { repository = "https://github.com/fjcanyue/comic_downloader" }
keywords = ["comics downloader", "python"]
requires-python = ">=3.10.0"
dependencies = [
    "lxml>=5.4.0",
    "requests>=2.32.4",
    "selenium>=4.33.0",
    "tqdm>=4.67.1",
    "prompt-toolkit>=3.0.51",
    "loguru>=0.7.3",
]

[project.scripts]
main = "main"


# DEV SETTING
[dependency-groups]
dev = [
    "pyright>=1.1.403",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.13.1",
    "toml>=0.10.2",
    "toml-sort>=0.24.3",
    "uv>=0.8.20",
    "bump-my-version>=1.2.3",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-include-markdown-plugin>=7.1.7",
    "mkdocs-jupyter2>=0.25.2",
    "mkdocs-material>=9.6.20",
    "mkdocstrings-python>=1.18.2",
    "mkdocs-minify-plugin>=0.8.0",
    "mkdocs-glightbox>=0.5.1",
    "mkdocs-git-revision-date-localized-plugin>=1.4.7",
    "pymdown-extensions>=10.16",
    "mike>=2.1.3",
]

# DEV SETTING
[tool.uv]
default-groups = ["dev"]

# DEV SETTING
# ruff.toml file is used.
[tool.ruff]

# DEV SETTING
# pytest.ini file is used.
[tool.pytest]

# DEV SETTING
# .coveragerc file is used. A pytest fixture in .conftest.py is used to create coverage file/report directory.
[tool.coverage]

# DEV SETTING
# pyrightconfig.json file is used. NOTE: Ensure to set the python version correctly.
[tool.pyright]

# DEV SETTING
# NOTE: to sort, run: "uv run toml-sort pyproject.toml"
[tool.tomlsort]
in_place = true
no_sort_tables = true
sort_inline_arrays = true
spaces_before_inline_comment = 4
spaces_indent_inline_array = 4

# DEV SETTING
# pytest
[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests", "integration"]

[tool.bumpversion]
current_version = "0.0.1"

[[tool.bumpversion.files]]
filename = "downloader/__init__.py"
